# MMIDAS

./: .gitignore  README.md  config.toml  pyproject.toml  regression.py  test_eval.py  train_vae.py
KEGG/: KEGG.toml  KEGG_pathways.csv
clustering_study/ACTIONet/: actionet-experiments.md  eval_clusters.py
clustering_study/CascadeVAE/config/: parser.py  path.py
clustering_study/CascadeVAE/experiment/CascadeVAE/: local_config.py  main.py  model.py  run_exp1.py
clustering_study/CascadeVAE/modules/cellType/: analysis_cells_tree.py  celltype_hierarchy.py  clustermap.py  post_analysis.py
clustering_study/CascadeVAE/tfops/: loss.py  lr_op.py  nets.py  transform_op.py
clustering_study/CascadeVAE/utils/: celltype_hierarchy.py  datamanager.py  datasetmanager.py  general_class.py  np_op.py
clustering_study/JointVAE/: train.py
clustering_study/JointVAE/jointvae/: models.py  newModel.py  newTraining.py  training.py
clustering_study/JointVAE/utils/: analysis_cells_tree.py  dataloaders.py  load_model.py  post_analysis.py
clustering_study/Seurat/: leiden_clustering.py
data/: facs_genes.csv
mmidas/: __init__.py  cpl_mixvae.py  eval_models.py  nn_model.py  train.py  training.py
mmidas/augmentation/: dataloader.py  udagan.py
mmidas/utils/: analysis_cells_tree.py  cluster_analysis.py  dataloader.py  get_region_info.py  nn_model_LN.py  post_analysis.py  tools.py  train_cplMixVAE.py  training.py  training_1.py  training_VAE.py  training_allgene.py  tree_based_analysis.py  vae.py
mmidas/utils/augmentation/: mapping.py  train.py
notebooks/: 1_data_prep.ipynb  2_train.ipynb  3_evaluation.ipynb  4_clusterability.ipynb  ExcitetoryCells.ipynb  InhibitoryCells.ipynb  L4-IT_exc3Don_post_analysis.ipynb  L4-IT_post_analysis.ipynb  compare_classLabels.ipynb  data_prep.ipynb  post_analysis_models.ipynb  train.txt
notebooks/.ipynb_checkpoints/: Exc-InhCells-checkpoint.ipynb  L4-IT_exc3Don_post_analysis-checkpoint.ipynb  L4-IT_post_analysis-checkpoint.ipynb  compare_classLabels-checkpoint.ipynb
train_mixtureVAE/: train_smartseq.py
traversal_analysis/: patchseq.py
tutorial/: data_prep.ipynb
tutorials/: fsdp.py  min_fsdp.py  train_smartseq.py  train_smartseq_fsdp.py
tutorials/train_mixtureVAE/: train_10x.py
tutorials/traversal_analysis/: smartseq.py
utils/: cluster_analysis.py  config.py  dataloader.py  eval_allgenes.py  eval_models.py  nn_model.py  read_brainMap_data.py  single_AE.py  state_analysis.py  training_2.py  tree_based_analysis.py
